Fix bad heading color vibration in dark mode

--- a/Resources/css/styles.css
+++ b/Resources/css/styles.css
@@ -1,6 +1,7 @@
 :root {
 	--color-accent: 0, 118, 255;
 	--color-text: 44, 53, 71;
+	--color-heading: var(--color-text);
 	--color-background: 238, 240, 241;
 	--color-main-background: 255, 255, 255;
 	--color-blue-dark: 0, 148, 255;
@@ -14,6 +15,7 @@
 	:root {
 		--color-accent: 84, 199, 252;
 		--color-text: 255, 255, 255;
+		--color-heading: 211, 211, 211;
 		--color-background: 17, 17, 17;
 		--color-main-background: 34, 34, 34;
 		--color-blue-dark: 0, 52, 93;
@@ -324,6 +326,7 @@ h1,
 h2,
 h3 {
 	font-family: "Concourse T7", sans-serif;
+	color: rgb(var(--color-heading));
 }
 
 h1 {
